--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body  dir="rtl" class="mat-typography">
+  <img class="back" src="./assets/images/background.jpg" alt="">
   <app-root></app-root>
 </body>
 </html>
